Depend on recent enough CPAN::Meta
CPAN::Meta::Check depends on CPAN::Meta version 2.120920. However, if an
older version of CPAN::Meta is installed, C:M:C's Makefile.PL doesn't
warn about a missing prerequisite. The result is that the CPAN shell
doesn't upgrade C:M, and then tests fail when an older C:M returns a
Version::Requirements object instead of the expected
CPAN::Meta::Requirements object.

Reported by Zefram

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for CPAN-Meta-Check
 
 {{$NEXT}}
+          Depend on recent enough CPAN::Meta
 
 0.003     2012-05-09 20:48:01 Europe/Amsterdam
           Allow explicit setting of the include dir
