Swap conflicts test, underscore versions broke it
For $VERSION's with an underscore in them, Module::Metadata may detect a
version that isn't quite identical to the one returned by
Module->VERSION. Since that's a realistic issue for Test::More but not
for Test::Deep, I've switched them around. This is still somewhat
fragile though.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for CPAN-Meta-Check
 
 {{$NEXT}}
+          Swap conflicts test, as underscore versions broke it
 
 0.006     2013-07-27 00:24:21 Europe/Amsterdam
           Fixed bad dereference during conflicts checking
