Test Env instead of Carp for version overshoot
This test is tricky on dev-releases, so choose a module that not only
has never had one, but also is unlikely to be modified by end-users

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for CPAN-Meta-Check
 
 {{$NEXT}}
+          Test Env instead of Carp for version overshoot [#89591]
           Document $incdirs in the right function
 
 0.007     2013-07-31 14:37:58 Europe/Amsterdam
