--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for CPAN-Meta-Check
 
 {{$NEXT}}
+          Various POD fixes
 
 0.008     2013-10-17 16:44:57 Europe/Amsterdam
           Switch to using merged_requirements
