declare the minimum version required for the "merged_requirements" interface

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for CPAN-Meta-Check
 
 {{$NEXT}}
+          Declare the minimum version required for the "merged_requirements" interface
 
 0.010     2015-01-30 19:10:49+01:00 Europe/Amsterdam
           bump Module::Metdata prereq for $VERSION parsing (RT#101095)
