Make tests more resilient against dev versions of dependencies

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for CPAN-Meta-Check
 
 {{$NEXT}}
+          Make tests more resilient against dev versions of dependencies
 
 0.012     2015-06-18 23:20:54+02:00 Europe/Amsterdam
           Drop dependency on Exporter 5.57
