--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for CPAN-Meta-Check
 
 {{$NEXT}}
+          - Use Module::Metadata for more accurate testing
 
 0.016     2023-01-03 14:25:46+01:00 Europe/Amsterdam
           - Fix rounding issue in test
